--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  height: 100vh;
+  background-color: green;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+.carta {
+  width: 200px;
+  height: 300px;
+  background-color: white;
+}
